Blender crash using node groups connected with displacement output in some situations #48662

Closed
opened 2016-06-16 23:33:25 +02:00 by Matias Mendiola · 4 comments

System Information:
Windows 10 64bit - NVIDIA GeForce GTX 560

Blender Version
2.77 (sub 1), branch: master, commit date: 2016-06-14 21:03, hash: e0db647, type: Release

Short description of error
Blender crash using node groups connected with displacement output when the node group is duplicated (CTRL+D)

Exact steps for others to reproduce the error *

Please use the attached file (two scenes):

Scene_Bug_1 (duplicating group node)

  • Select material shader for the viewport
  • Duplicate the node group (CTRL+D) -> Blender crash

Scene_Bug_2 (using two material output on the same material) *(change viewport to solid mode before change scene, if not, Blender will crash)

  • Select material shader for the viewport -> Blender crash

node_group_and_displacement_bug.blend

**System Information:** Windows 10 64bit - NVIDIA GeForce GTX 560 **Blender Version** 2.77 (sub 1), branch: master, commit date: 2016-06-14 21:03, hash: e0db647, type: Release **Short description of error** Blender crash using node groups connected with displacement output when the node group is duplicated (CTRL+D) **Exact steps for others to reproduce the error** * Please use the attached file (two scenes): **Scene_Bug_1 (duplicating group node)** - Select **material shader** for the viewport - Duplicate the node group (CTRL+D) -> Blender crash **Scene_Bug_2 (using two material output on the same material)** *(change viewport to solid mode before change scene, if not, Blender will crash) - Select **material shader** for the viewport -> Blender crash [node_group_and_displacement_bug.blend](https://archive.blender.org/developer/F317356/node_group_and_displacement_bug.blend)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @mendio

Added subscriber: @mendio

This issue was referenced by ca01fe58e1

This issue was referenced by ca01fe58e1476cd1c56f5585c057539149f0060e

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#48662
No description provided.