Fix T48662: Blender crash using node groups connected with displacement output in some situations